src/test/resources/failing/fail30.pnd
P(x)
Q(y) <- X.P(x)
